[ebrietas-parser]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Fadeev Denis", email="dfadeev@gmail.com" },
]
description = "A small package for parsing data from specific web sites"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/"
"Bug Tracker" = ""